@@ -86,3 +86,7 @@ Added a check for maximum input channels
 
 2.4 Featured release
 --------------------
+
+User defined parametric curves can now be saved in ICC profiles.
+RGB profiles using same tone curves for several channels are storing now only one copy of the curve (saves space)
+
